--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,8 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Seat reservation web application for company Endava. Where you can dynamically choose your workspace or reserve it for a few days in advance. It's simple and easy to use. Save time and optimize workflow with our app."
     />
+    <meta name="author" content="Domen Perko, Gregor Sulcer, Jernej Ofič" />
+    <meta name="keywords" content="Endava, Seat reservation" />
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Endava Reservation System</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
